# d3d11-example

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
include/: dx11_backend.hpp  gui.hpp  hresult_helpers.h
src/: dx11_backend.cpp  gui.cpp  main.cpp
